<resources>
    <string name="app_name">Xiaomi Store</string>
    <string name="gambar_produk">Gambar Produk Xiaomi</string>
    <string name="nama_produk">Xiaomi Redmi Note 10 Pro</string>
    <string name="spesifikasi_produk">6/128GB MediaTek Dimensity 700\nWarna : Power Black</string>
    <string name="harga_produk">Rp 3.999.000</string>
    <string name="detail">Detail</string>
    <string name="name">Vincent Nathaniel Moeljopranoto</string>
    <string name="email">vincentmoeljopranoto@gmail.com</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="detail_spek">RAM : 8GB\nStorage Internal : 128GB\nProsesor : Qualcomm Snapdragon 732G\nLayar : DotDisplay Amoled FHD+ 6,55inch\nDimensi : 160,53mm x 75,73mm x 6,61mm\nBaterai : 4250mAh</string>
    <string name="txt_detail_produk">Detail Produk :</string>
    <string name="spek_singkat">6/128GB Snapdragon 870\nWarna : Arctic White</string>
    <string name="nama_hp">Xiaomi POCO F3 5G</string>
</resources>