<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_detail_produk"
            android:layout_width="match_parent"
            android:layout_height="403dp"
            android:layout_gravity="top"
            android:layout_marginBottom="30dp"
            android:src="@drawable/poco_f3_5g" />

        <TextView
            android:id="@+id/tv_detail_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/nama_hp"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_detail_spesifikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"

            android:text="@string/spek_singkat"/>

        <TextView
            android:id="@+id/tv_detail_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/harga_produk"/>

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="7dp"
            android:text="@string/txt_detail_produk"
            android:textSize="17sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_detail_more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/detail_spek"/>


    </LinearLayout>

</ScrollView>